--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="/css file/dashboard.css">
 <link rel="stylesheet" href="/css file/framework.css">
 <link rel="stylesheet" href="/css file/normalize.css">
+<link rel="stylesheet" href="profile.html">
     <title>Dashboard</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
                 </a>
             </li>
             <li class="mb-20">
-                <a href="" class="b-c  d-block">
+                <a href="profile.html" class="b-c  d-block">
                     <i class="fa-solid fa-user"></i>
                     <span>profile</span>
                 </a>
