adding a new page to web
adding projects page in dashboard

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="/css file/framework.css">
 <link rel="stylesheet" href="/css file/normalize.css">
 <link rel="stylesheet" href="profile.html">
+<link rel="stylesheet" href="projects.html">
     <title>Dashboard</title>
 </head>
 <body>
@@ -33,7 +34,7 @@
                 </a>
             </li>
             <li class="mb-20">
-                <a href="" class="b-c d-block">
+                <a href="projects.html" class="b-c d-block">
                     <i class="fa-solid fa-diagram-project"></i>                         <span>projects</span>
                 </a>
             </li>
