--- a/profile.html
+++ b/profile.html
@@ -33,7 +33,7 @@
                 </a>
             </li>
             <li class="mb-20">
-                <a href="" class="b-c d-block">
+                <a href="projects.html" class="b-c d-block">
                     <i class="fa-solid fa-diagram-project"></i>                         <span>projects</span>
                 </a>
             </li>
