adding some pages and recoding the other pages
Some final touches to finish dashboard

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <link rel="stylesheet" href="/css file/normalize.css">
 <link rel="stylesheet" href="profile.html">
 <link rel="stylesheet" href="projects.html">
+<link rel="stylesheet" href="friends.html">
+<link rel="stylesheet" href="files.html">
+<link rel="stylesheet" href="courses.html">
+<link rel="stylesheet" href="plans.html">
+<link rel="stylesheet" href="settings.html">
     <title>Dashboard</title>
 </head>
 <body>
@@ -39,28 +44,28 @@
                 </a>
             </li>
             <li class="mb-20">
-                <a href=""class="b-c d-block">
+                <a href="friends.html"class="b-c d-block">
                     <i class="fa-solid fa-user-group"></i>                          <span>friends</span>
                 </a>
             </li>
             <li class="mb-20">
-                <a href=""class="b-c d-block">
+                <a href="files.html"class="b-c d-block">
                     <i class="fa-solid fa-file"></i>
-                                            <span>file</span>
+                                            <span>files</span>
                 </a>
             </li>
             <li class="mb-20">
-                <a href=""class="b-c d-block">
+                <a href="courses.html"class="b-c d-block">
                     <i class="fa-solid fa-graduation-cap"></i>                        <span>courses</span>
                 </a>
             </li>
             <li class="mb-20">
-                <a href=""class="b-c d-block">
+                <a href="plans.html"class="b-c d-block">
                     <i class="fa-solid fa-head-side-virus"></i>                        <span>plans</span>
                 </a>
             </li>
             <li class="mb-20">
-                <a href=""class="b-c d-block">
+                <a href="settings.html"class="b-c d-block">
                     <i class="fa-solid fa-gear"></i>                        <span>settings</span>
                 </a>
             </li>
