--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,12 @@
 <link rel="stylesheet" href="/css file/framework.css">
 <link rel="stylesheet" href="/css file/normalize.css">
 <link rel="stylesheet" href="profile.html">
+<link rel="stylesheet" href="projects.html">
+<link rel="stylesheet" href="friends.html">
+<link rel="stylesheet" href="files.html">
+<link rel="stylesheet" href="courses.html">
+<link rel="stylesheet" href="plans.html">
+<link rel="stylesheet" href="settings.html">
     <title>Profile</title>
 </head>
 <body>
@@ -38,28 +44,28 @@
                 </a>
             </li>
             <li class="mb-20">
-                <a href=""class="b-c d-block">
+                <a href="friends.html"class="b-c d-block">
                     <i class="fa-solid fa-user-group"></i>                          <span>friends</span>
                 </a>
             </li>
             <li class="mb-20">
-                <a href=""class="b-c d-block">
-                    <i class="fa-solid fa-file"></i>
+                <a href="files.html"class="b-c d-block">
+                    <i class="fa-solid fa-files"></i>
                                             <span>file</span>
                 </a>
             </li>
             <li class="mb-20">
-                <a href=""class="b-c d-block">
+                <a href="courses.html"class="b-c d-block">
                     <i class="fa-solid fa-graduation-cap"></i>                        <span>courses</span>
                 </a>
             </li>
             <li class="mb-20">
-                <a href=""class="b-c d-block">
+                <a href="plans.html"class="b-c d-block">
                     <i class="fa-solid fa-head-side-virus"></i>                        <span>plans</span>
                 </a>
             </li>
             <li class="mb-20">
-                <a href=""class="b-c d-block">
+                <a href="settings.html"class="b-c d-block">
                     <i class="fa-solid fa-gear"></i>                        <span>settings</span>
                 </a>
             </li>
@@ -79,8 +85,8 @@
         <img src="/images/avatar.png" class="rad" alt="">
     </div>
 </div>
-<div class="content p-20">
-    <h2 class="p-rel d-block w-fit f-w f-size">profile</h2>
+        <div class="content p-20">
+    <h2 class="p-rel d-block w-fit f-w f-size">profile</h2>        
     <div class="profile-card d-flex align-c gap-20 mt-20 bg-w bord-rad10 p-10">
         <div class="left t-center p-20">
             <img src="/images/avatar.png" alt="" class="rad" style="width: 150px;">
@@ -110,8 +116,8 @@
                 <h4>personal information</h4>
                 <div class="info d-flex align-c j-center gap-20">
                     <p>email:<b class="t-c">mmokarb@gmail.com</b></p>
-                    <p>phone:<b class="t-c">01029203765</b></p>
-                    <p>data of birth:<b class="t-c">13/7/2003</b></p>
+                    <p>phone:<b class="t-c">+966 008 684 245</b></p>
+                    <p>data of birth:<b class="t-c">01/01/2003</b></p>
                 </div>
             </div>
             <div class="box-three">
