Final touches to the dashboard
finish the dashboard

--- a/profile.html
+++ b/profile.html
@@ -110,6 +110,10 @@
                     <p>full name:<b class="t-c">mahmoud hassan abdullah</b></p>
                     <p> gander:<b class="t-c">male</b></p>
                     <p>country:<b class="t-c">egypt</b></p>
+                    <label>
+                        <input class="toggle-check-box" type="checkbox"checked>
+                        <div class="check-box"></div>
+                    </label>
                 </div>
             </div>
             <div class="box-two">
@@ -118,6 +122,10 @@
                     <p>email:<b class="t-c">mmokarb@gmail.com</b></p>
                     <p>phone:<b class="t-c">+966 008 684 245</b></p>
                     <p>data of birth:<b class="t-c">01/01/2003</b></p>
+                    <label>
+                        <input class="toggle-check-box" type="checkbox">
+                        <div class="check-box"></div>
+                    </label>
                 </div>
             </div>
             <div class="box-three">
@@ -126,6 +134,10 @@
                     <p>title:<b class="t-c">full stack developer</b></p>
                     <p>programming Language:<b class="t-c">css</b></p>
                     <p>years of experience:<b class="t-c">2 years +</b></p>
+                    <label>
+                        <input class="toggle-check-box" type="checkbox"checked>
+                        <div class="check-box"></div>
+                    </label>
                 </div>
             </div>
             <div class="box-four">
@@ -134,6 +146,10 @@
                     <p>payment method:<b class="t-c">paypal</b></p>
                     <p>email:<b class="t-c">mahmoud@paypal.com</b></p>
                     <p>subscription:<b class="t-c">yearly</b></p>
+                    <label>
+                        <input class="toggle-check-box" type="checkbox">
+                        <div class="check-box"></div>
+                    </label>
                 </div>
             </div>
 
